# histlite

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: about.rst  conf.py  getting_started.ipynb  index.rst  install.rst  pdfs_and_normalization.ipynb  reference.rst  requirements.txt  tutorials.rst
histlite/: __init__.py  bear.py  heal.py  termplot.py  version.py
resources/docs/: index.rst
resources/test/: test_Hist.py
test/: test_hist.py
