[project]
name = "histlite"
version = "2025.7.0"
description = 'A somewhat "lite" histogram library'
long_description = """**histlite** is a histogram calculation and plotting library that tries to be
"lite" on data structures but rich in statistics and visualization features.
So far, development has taken place during my (Mike Richman) time as a graduate
student and post-doctoral researcher in the field of particle astrophysics —
specifically, working with the IceCube Neutrino Observatory.  Histlite is
intended both to facilitate high-paced exploratory data analysis as well as to
serve as a building block for potentially very complex maximum likelihood data
analysis implementations.

The core design considerations are:

* It must be trivial to work with and interchange between 1D, 2D, or ND histograms.
* It should be as simple as possible to perform bin-wise arithmetic
  operations on one or more histograms; to perform sums, integrals, etc. and
  thus normalizations along one or more axes simultaneously; and to perform
  spline or user-defined functional fits
* It should be as simple as possible to achieve publication-quality plots.

The primary histogramming functionality consists of a thin wrapper around
`numpy.histogramdd`.  Statistical tools leverage **scipy** but include
custom solutions for some use cases.  (Importantly, error propagation is
currently handled manually but may be migrated to the **uncertainties**
package in the future.)  Plotting is done using **matplotlib**."""
readme = "README.md"
authors = [
    { name = "Mike Richman", email = "mike.d.richman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://histlite.readthedocs.io/"
Documentation = "https://histlite.readthedocs.io/"
Repository = "https://github.com/zgana/histlite"
Issues = "https://github.com/zgana/histlite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
]

